<resources>
    <string name="app_name">MedicineRemainder</string>
    <string name="enter_your_mobile_number">Enter your name and age to can use the app</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_name">Full Name</string>
    <string name="or">OR</string>
    <string name="Createanaccount">Create Account</string>
    <string name="enter_your_phone">Phone</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_age">Age</string>
    <string name="enter_your_email">Email</string>
    <string name="please_fill_all_the_fields">Please Fill All The Fields</string>
    <string name="please_Enter_valid_email">Please Enter valid Email</string>

    <string name="home">Home</string>
    <string name="medicines">Medicines</string>
    <string name="today_s_medicine">Today\'s Medicine</string>
    <string name="upcoming">UpComing</string>
    <string name="stay_connrcted_with_your_health">Stay Connected With Your Health!</string>
    <string name="hi">Hi</string>

    <string name="addMedicines">Add Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="enter__medicine_name">Medicine Name</string>
    <string name="Interval">Interval</string>
    <string name="Notes">Notes</string>
    <string name="enter_medicine_instructions">Enter Medicine Instructions</string>
    <string name="Type">Type</string>
    <string name="Dose">Dose</string>
    <string name="pleaseSelectStartTime">Please Select Time Reminder For This medicine</string>
    <string name="SaveMedicine">Save Medicine</string>
    <string name="please_enter_medicine_name">Please enter medicine name</string>
    <string name="please_select_dates_for_reminder">please select dates for reminder</string>
    <string name="please_choose_interval">Please select Interval</string>
    <string name="saved_successfully">Save Suucessfully</string>
    <string name="enter_medicine_dose">Enter Medicine Dose</string>
    <string name="please_choose_time">Please choose time for remonder</string>
    <string-array name="intervalsList">
        <item>"24 hr"</item>>
        <item>"12 hr"</item>>
        <item>"8 hr"</item>>
    </string-array>


    <string name="Reports">Reports</string>
    <string name="not_taken">Not Taken</string>
    <string name="Taken">Taken</string>
    <string name="Statistics">Statisitics</string>
    <string name="MyMedicines">My Medicines</string>
    <string name="totalmedicines">Total Medicines</string>
    <string name="my_profile">My Profile</string>
    <string name="mystatistics">MyStatistics</string>
    <string name="pharamcies">Nearest Pharamcies</string>
    <string name="More">More</string>
    <string name="no_pharmacies_found">No Pharamices Found Nearest to you</string>
    <string name="change_language">Change Language</string>
    <string name="ok">Ok</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
</resources>