<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/mainAppColor"
        app:layout_constraintHeight_percent = "0.12"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:fontFamily="@font/tajawal_extrabold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="10dp"
            android:text="@string/my_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_name"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="25sp"
        android:textColor="@color/darkGray"
        android:inputType="textPersonName"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_age"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="25sp"
        android:textColor="@color/darkGray"
        android:inputType="number"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_age"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        />
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:fontFamily="@font/tajawal_bold"
        android:text="@string/Edit"
        android:textSize="20dp"
        android:background="@drawable/btn_corner"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminateDrawable="@drawable/inidcator"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>