<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".Activities.RegisterActivity"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true"
    >

<LinearLayout
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 >
    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintHeight_percent="0.23"
        android:src="@drawable/log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:textColor="@color/darkGray"
        android:textSize="23sp"
        android:text="@string/enter_your_mobile_number"
        android:fontFamily="@font/tajawal_medium"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/userName"
        />
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_name"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="25sp"
        android:textColor="@color/darkGray"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintBottom_toTopOf="@id/email"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_email"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="25sp"
        android:textColor="@color/darkGray"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:imeOptions="actionNext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintBottom_toTopOf="@id/age"

        />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_age"
        android:drawablePadding="8dp"
        android:fontFamily="@font/tajawal_regular"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:padding="8dp"
        android:textColor="@color/darkGray"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintBottom_toTopOf="@id/password"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_your_password"
        android:fontFamily="@font/tajawal_regular"
        android:textSize="25sp"
        android:textColor="@color/darkGray"
        android:background="@drawable/et_borders"
        android:drawableStart="@drawable/ic_lock"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        />
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:fontFamily="@font/tajawal_bold"
        android:text="@string/Createanaccount"
        android:textSize="20sp"
        android:background="@drawable/btn_corner"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginBottom="30dp"
        />
<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        android:layout_width="64dp"-->
<!--        android:layout_height="64dp"-->
<!--        android:indeterminateDrawable="@drawable/inidcator"-->
<!--        android:visibility="gone"-->
<!--        android:layout_gravity="center"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
</LinearLayout>

</ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminateDrawable="@drawable/inidcator"
        android:visibility="gone"
        android:layout_gravity="center"/>
</LinearLayout>