<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background"
        tools:context=".Fragments.StatisticsFragment"
    >
    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/mainAppColor"
        app:layout_constraintHeight_percent = "0.1"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:fontFamily="@font/tajawal_extrabold"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:text="@string/Reports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportView"
        android:layout_margin="15dp"
        app:layout_constraintHeight_percent = "0.7"
        />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barChart"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintWidth_percent = "0.5"
            >
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/mainAppColor"
            android:background="@drawable/box" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Taken"
            android:fontFamily="@font/tajawal_medium"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintWidth_percent = "0.5">
            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/lightPurple"
                android:background="@drawable/box" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_taken"
                android:fontFamily="@font/tajawal_medium"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>